feat: desktop coveñas home

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -83,12 +83,18 @@
               </div>
             </div>
             <div class="col-xs-12 col-md-6">
-              <video
-                controls
-                preload="auto"
-                class="w-100"
-                src="https://res.cloudinary.com/dmzy7wmtt/video/upload/v1732908064/FONDO_WEB_VISITA_DE_CLIENTES_tjmsdq.mp4"
-              ></video>
+              <div class="container-video-yt">
+                <iframe
+                  width="1280"
+                  height="720"
+                  src="https://www.youtube.com/embed/1Hgtm8de92I"
+                  title="Visita de clientes a Vasconia"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
             </div>
           </div>
         </div>
@@ -109,7 +115,11 @@
             <div class="terminal-carousel position-relative px-5">
               <div class="d-flex flex-row align-items-center">
                 <div class="col-xs-12 col-md-3 px-2">
-                  <img class="img-fluid" src="/assets/img/icons/vector-smart-object.svg" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="/assets/img/icons/vector-smart-object.svg"
+                    alt=""
+                  />
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
@@ -121,7 +131,11 @@
 
               <div class="d-flex flex-row align-items-center">
                 <div class="col-xs-12 col-md-3 px-2">
-                  <img class="img-fluid" src="/assets/img/icons/vector-smart-object.svg" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="/assets/img/icons/vector-smart-object.svg"
+                    alt=""
+                  />
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
@@ -133,7 +147,11 @@
 
               <div class="d-flex flex-row align-items-center">
                 <div class="col-xs-12 col-md-3 px-2">
-                  <img class="img-fluid" src="/assets/img/icons/vector-smart-object.svg" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="/assets/img/icons/vector-smart-object.svg"
+                    alt=""
+                  />
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
@@ -145,7 +163,11 @@
 
               <div class="d-flex flex-row align-items-center">
                 <div class="col-xs-12 col-md-3 px-2">
-                  <img class="img-fluid" src="/assets/img/icons/vector-smart-object.svg" alt="" />
+                  <img
+                    class="img-fluid"
+                    src="/assets/img/icons/vector-smart-object.svg"
+                    alt=""
+                  />
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
@@ -192,7 +214,7 @@
           </div>
 
           <div
-            class="p-3 card-ocensa shadow rounded text-center rounded-lg bg-white"
+            class="p-3 card-ocensa shadow rounded text-center rounded-lg bg-white d-flex justify-content-center align-items-center"
           >
             <div
               class="card-ocensa-carousel position-relative custom-dots-2024"
@@ -235,7 +257,7 @@
           >
             <div class="d-flex flex-row align-items-center">
               <div class="text-left" style="line-height: 1.3em">
-                <p style="white-space: nowrap;">Coveñas, Sucre</p>
+                <p style="white-space: nowrap">Coveñas, Sucre</p>
                 <p>16/10/2024</p>
                 <h5 class="text-gray-light-ocensa">Miércoles</h5>
                 <img
@@ -259,9 +281,101 @@
                   <h5 class="mt-2">°C <span>|</span> °F</h5>
                 </div>
                 <p>Parcialmente nublado</p>
-                <p style="font-size: 14px; line-height: 1.1em;" class="text-gray-light-ocensa">
-                  Prob. de precipitaciones: 30% <br> Humedad: 77% <br> Viento: a 13 km/h
+                <p
+                  style="font-size: 14px; line-height: 1.1em"
+                  class="text-gray-light-ocensa"
+                >
+                  Prob. de precipitaciones: 30% <br />
+                  Humedad: 77% <br />
+                  Viento: a 13 km/h
                 </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center">
+          <img class="img-fluid" src="/assets/img/grupo-771.webp" alt="" />
+        </div>
+      </section>
+
+      <section class="bg-green-ocensa py-3 terminal">
+        <div class="container">
+          <div
+            class="d-flex flex-row align-items-center justify-content-center"
+          >
+            <h5
+              style="white-space: nowrap"
+              class="text-light m-0 font-weight-bold text-center"
+            >
+              LICENCIAS <br />
+              Y PERMISOS <br />
+              AMBIENTALES
+            </h5>
+            <span style="height: 80px" class="divider-vertical mx-4"></span>
+            <div class="terminal-carousel position-relative px-5">
+              <div class="d-flex flex-row align-items-center">
+                <div class="col-xs-12 col-md-3 px-2">
+                  <img
+                    style="transform: scale(1.4)"
+                    class="img-fluid"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="col-xs-12 col-md-9 px-2 text-center">
+                  <h5 class="font-weight-bold text-light m-0">Licencia Ambiental</h5>
+                  <p class="text-light">(Resolución 952 de 1995)</p>
+                  <a class="button-oc-2024 color-light my-2 d-inline-block" href="">Ver más</a>
+                </div>
+              </div>
+
+              <div class="d-flex flex-row align-items-center">
+                <div class="col-xs-12 col-md-3 px-2">
+                  <img
+                    style="transform: scale(1.4)"
+                    class="img-fluid"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="col-xs-12 col-md-9 px-2 text-center">
+                  <h5 class="font-weight-bold text-light m-0">Licencia Ambiental</h5>
+                  <p class="text-light">(Resolución 952 de 1995)</p>
+                  <a class="button-oc-2024 color-light my-2 d-inline-block" href="">Ver más</a>
+                </div>
+              </div>
+
+              <div class="d-flex flex-row align-items-center">
+                <div class="col-xs-12 col-md-3 px-2">
+                  <img
+                    style="transform: scale(1.4)"
+                    class="img-fluid"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="col-xs-12 col-md-9 px-2 text-center">
+                  <h5 class="font-weight-bold text-light m-0">Licencia Ambiental</h5>
+                  <p class="text-light">(Resolución 952 de 1995)</p>
+                  <a class="button-oc-2024 color-light my-2 d-inline-block" href="">Ver más</a>
+                </div>
+              </div>
+
+              <div class="d-flex flex-row align-items-center">
+                <div class="col-xs-12 col-md-3 px-2">
+                  <img
+                    style="transform: scale(1.4)"
+                    class="img-fluid"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="col-xs-12 col-md-9 px-2 text-center">
+                  <h5 class="font-weight-bold text-light m-0">Licencia Ambiental</h5>
+                  <p class="text-light">(Resolución 952 de 1995)</p>
+                  <a class="button-oc-2024 color-light my-2 d-inline-block" href="">Ver más</a>
+                </div>
               </div>
             </div>
           </div>
