feat: start responsive home coveñas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <h1>INDICE</h1>
+  <ul>
+    <li><a href="/pages/terminal-maritimo-covenas/index.html">Terminal marítimo Coveñas</a></li>
+  </ul>  
 </body>
 </html>
