--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -32,7 +32,7 @@
       <section class="bg-dark banner-principal py-5 position-relative">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-lg-6">
               <h1
                 class="banner-principal__title text-light text-uppercase font-weight-bold"
               >
@@ -49,40 +49,40 @@
                 960.556 m2 en una zona costera estratégica, con temperatura
                 promedio de 27ºC.
               </p>
-              <div class="d-flex flex-row mt-5">
+              <div style="gap: 10px; box-sizing: border-box;" class="d-flex flex-wrap flex-row mt-3 mt-lg-5 mb-5 mb-lg-0 certifieds">
                 <img
-                  class="img-fluid mr-2"
+                  class="img-fluid"
                   src="/assets/img/grupo-765.webp"
                   alt=""
                 />
                 <img
-                  class="img-fluid mr-2"
-                  src="/assets/img/grupo-765.webp"
+                  class="img-fluid"
+                  src="/assets/img/covenas-certified-2.webp"
                   alt=""
                 />
                 <img
-                  class="img-fluid mr-2"
-                  src="/assets/img/grupo-765.webp"
+                  class="img-fluid"
+                  src="/assets/img/covenas-certified-3.webp"
                   alt=""
                 />
                 <img
-                  class="img-fluid mr-2"
-                  src="/assets/img/grupo-765.webp"
+                  class="img-fluid"
+                  src="/assets/img/covenas-certified-4.webp"
                   alt=""
                 />
                 <img
-                  class="img-fluid mr-2"
-                  src="/assets/img/grupo-765.webp"
+                  class="img-fluid"
+                  src="/assets/img/covenas-certified-5.webp"
                   alt=""
                 />
                 <img
-                  class="img-fluid mr-2"
-                  src="/assets/img/grupo-765.webp"
+                  class="img-fluid"
+                  src="/assets/img/covenas-certified-6.webp"
                   alt=""
                 />
               </div>
             </div>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-lg-6">
               <div class="container-video-yt">
                 <iframe
                   width="1280"
@@ -100,10 +100,10 @@
         </div>
       </section>
 
-      <section class="bg-green-ocensa py-3 terminal">
+      <section class="bg-green-ocensa pt-3 py-lg-3 terminal">
         <div class="container">
           <div
-            class="d-flex flex-row align-items-center justify-content-center"
+            class="d-flex flex-column flex-lg-row align-items-center justify-content-center"
           >
             <h5
               style="white-space: nowrap"
@@ -112,11 +112,11 @@
               El Terminal
             </h5>
             <span style="height: 80px" class="divider-vertical mx-4"></span>
-            <div class="terminal-carousel position-relative px-5">
-              <div class="d-flex flex-row align-items-center">
+            <div class="terminal-carousel mt-4 mt-lg-0 position-relative px-lg-5 custom-dots-2024">
+              <div class="d-flex flex-column flex-lg-row align-items-center text-center text-lg-left">
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
-                    class="img-fluid"
+                    class="img-fluid mx-auto mx-lg-0 mb-3 mb-lg-0"
                     src="/assets/img/icons/vector-smart-object.svg"
                     alt=""
                   />
@@ -129,10 +129,10 @@
                 </div>
               </div>
 
-              <div class="d-flex flex-row align-items-center">
+              <div class="d-flex flex-column flex-lg-row align-items-center text-center text-lg-left">
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
-                    class="img-fluid"
+                    class="img-fluid mx-auto mx-lg-0 mb-3 mb-lg-0"
                     src="/assets/img/icons/vector-smart-object.svg"
                     alt=""
                   />
@@ -145,10 +145,10 @@
                 </div>
               </div>
 
-              <div class="d-flex flex-row align-items-center">
+              <div class="d-flex flex-column flex-lg-row align-items-center text-center text-lg-left">
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
-                    class="img-fluid"
+                    class="img-fluid mx-auto mx-lg-0 mb-3 mb-lg-0"
                     src="/assets/img/icons/vector-smart-object.svg"
                     alt=""
                   />
@@ -161,10 +161,10 @@
                 </div>
               </div>
 
-              <div class="d-flex flex-row align-items-center">
+              <div class="d-flex flex-column flex-lg-row align-items-center text-center text-lg-left">
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
-                    class="img-fluid"
+                    class="img-fluid mx-auto mx-lg-0 mb-3 mb-lg-0"
                     src="/assets/img/icons/vector-smart-object.svg"
                     alt=""
                   />
@@ -182,9 +182,9 @@
       </section>
 
       <section class="py-5 bg-pattern-2024" id="">
-        <div style="gap: 40px" class="d-flex flex-row">
+        <div style="gap: 40px" class="d-flex flex-lg-row flex-column">
           <div
-            class="d-flex flex-row align-items-center text-center p-5 card-ocensa menu-map shadow bg-white"
+            class="d-flex flex-row align-items-center text-center pl-4 p-2 p-lg-5 card-ocensa menu-map shadow bg-white"
           >
             <a
               href="#"
@@ -299,10 +299,10 @@
         </div>
       </section>
 
-      <section class="bg-green-ocensa py-3 terminal">
+      <section class="bg-green-ocensa pt-3 py-lg-3 terminal mb-5">
         <div class="container">
           <div
-            class="d-flex flex-row align-items-center justify-content-center"
+            class="d-flex flex-column flex-lg-row align-items-center justify-content-center"
           >
             <h5
               style="white-space: nowrap"
@@ -313,12 +313,11 @@
               AMBIENTALES
             </h5>
             <span style="height: 80px" class="divider-vertical mx-4"></span>
-            <div class="terminal-carousel position-relative px-5">
-              <div class="d-flex flex-row align-items-center">
+            <div class="terminal-carousel position-relative px-lg-5 custom-dots-2024">
+              <div class="d-flex flex-column flex-lg-row align-items-center mt-3 mt-lg-0">
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
-                    style="transform: scale(1.4)"
-                    class="img-fluid"
+                    class="img-fluid mx-auto mx-lg-0"
                     src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
                     alt=""
                   />
@@ -330,11 +329,10 @@
                 </div>
               </div>
 
-              <div class="d-flex flex-row align-items-center">
+              <div class="d-flex flex-column flex-lg-row align-items-center mt-3 mt-lg-0">
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
-                    style="transform: scale(1.4)"
-                    class="img-fluid"
+                    class="img-fluid mx-auto mx-lg-0"
                     src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
                     alt=""
                   />
@@ -346,11 +344,10 @@
                 </div>
               </div>
 
-              <div class="d-flex flex-row align-items-center">
+              <div class="d-flex flex-column flex-lg-row align-items-center mt-3 mt-lg-0">
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
-                    style="transform: scale(1.4)"
-                    class="img-fluid"
+                    class="img-fluid mx-auto mx-lg-0"
                     src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
                     alt=""
                   />
@@ -362,11 +359,10 @@
                 </div>
               </div>
 
-              <div class="d-flex flex-row align-items-center">
+              <div class="d-flex flex-column flex-lg-row align-items-center mt-3 mt-lg-0">
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
-                    style="transform: scale(1.4)"
-                    class="img-fluid"
+                    class="img-fluid mx-auto mx-lg-0"
                     src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
                     alt=""
                   />
