--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -57,27 +57,27 @@
                 />
                 <img
                   class="img-fluid"
-                  src="/assets/img/covenas-certified-2.webp"
+                  src="/assets/img/grupo-766.svg"
                   alt=""
                 />
                 <img
                   class="img-fluid"
-                  src="/assets/img/covenas-certified-3.webp"
+                  src="/assets/img/grupo-767.svg"
                   alt=""
                 />
                 <img
                   class="img-fluid"
-                  src="/assets/img/covenas-certified-4.webp"
+                  src="/assets/img/grupo-768.svg"
                   alt=""
                 />
                 <img
                   class="img-fluid"
-                  src="/assets/img/covenas-certified-5.webp"
+                  src="/assets/img/grupo-769.svg"
                   alt=""
                 />
                 <img
                   class="img-fluid"
-                  src="/assets/img/covenas-certified-6.webp"
+                  src="/assets/img/grupo-770.svg"
                   alt=""
                 />
               </div>
@@ -181,10 +181,10 @@
         </div>
       </section>
 
-      <section class="py-5 bg-pattern-2024" id="">
-        <div style="gap: 40px" class="d-flex flex-lg-row flex-column">
+      <section class="bg-pattern-2024" id="">
+        <div class="d-flex flex-lg-row flex-column mt-3 mt-lg-0 notifications-top">
           <div
-            class="d-flex flex-row align-items-center text-center pl-4 p-2 p-lg-5 card-ocensa menu-map shadow bg-white"
+            class="d-flex flex-row align-items-center text-center pl-4 p-2 p-lg-5 card-ocensa menu-map shadow bg-white position-sticky sticky-top"
           >
             <a
               href="#"
@@ -214,7 +214,7 @@
           </div>
 
           <div
-            class="p-3 card-ocensa shadow rounded text-center rounded-lg bg-white d-flex justify-content-center align-items-center"
+            class="mx-3 mx-lg-0 p-3 card-ocensa shadow rounded text-center rounded-lg bg-white d-flex justify-content-center align-items-center"
           >
             <div
               class="card-ocensa-carousel position-relative custom-dots-2024"
@@ -241,7 +241,7 @@
 
           <div
             style="background-color: #ecf7e8"
-            class="p-3 px-5 card-ocensa shadow rounded text-center rounded-lg"
+            class="mx-3 mx-lg-0 p-3 px-5 card-ocensa shadow rounded text-center rounded-lg"
           >
             <h5 class="font-weight-bold">Flora y fauna</h5>
             <img
@@ -249,11 +249,11 @@
               src="/assets/img/icons/rect-ngulo-56.webp"
               alt=""
             />
-            <a class="d-block button-oc-2024 mt-3" href="">VER MÁS</a>
+            <a class="d-block button-oc-2024 mt-3" href="">Ver más</a>
           </div>
 
           <div
-            class="p-3 card-ocensa shadow rounded text-center rounded-lg bg-white"
+            class="mx-3 mx-lg-0 p-3 card-ocensa shadow rounded text-center rounded-lg bg-white"
           >
             <div class="d-flex flex-row align-items-center">
               <div class="text-left" style="line-height: 1.3em">
@@ -299,7 +299,7 @@
         </div>
       </section>
 
-      <section class="bg-green-ocensa pt-3 py-lg-3 terminal mb-5">
+      <section class="bg-green-ocensa pt-3 py-lg-3 terminal terminal-bottom mb-5">
         <div class="container">
           <div
             class="d-flex flex-column flex-lg-row align-items-center justify-content-center"
@@ -315,14 +315,14 @@
             <span style="height: 80px" class="divider-vertical mx-4"></span>
             <div class="terminal-carousel position-relative px-lg-5 custom-dots-2024">
               <div class="d-flex flex-column flex-lg-row align-items-center mt-3 mt-lg-0">
-                <div class="col-xs-12 col-md-3 px-2">
+                <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
                     src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
                     alt=""
                   />
                 </div>
-                <div class="col-xs-12 col-md-9 px-2 text-center">
+                <div class="col-xs-12 col-md-8 px-1 text-center">
                   <h5 class="font-weight-bold text-light m-0">Licencia Ambiental</h5>
                   <p class="text-light">(Resolución 952 de 1995)</p>
                   <a class="button-oc-2024 color-light my-2 d-inline-block" href="">Ver más</a>
@@ -330,14 +330,14 @@
               </div>
 
               <div class="d-flex flex-column flex-lg-row align-items-center mt-3 mt-lg-0">
-                <div class="col-xs-12 col-md-3 px-2">
+                <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
                     src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
                     alt=""
                   />
                 </div>
-                <div class="col-xs-12 col-md-9 px-2 text-center">
+                <div class="col-xs-12 col-md-8 px-2 text-center">
                   <h5 class="font-weight-bold text-light m-0">Licencia Ambiental</h5>
                   <p class="text-light">(Resolución 952 de 1995)</p>
                   <a class="button-oc-2024 color-light my-2 d-inline-block" href="">Ver más</a>
@@ -345,14 +345,14 @@
               </div>
 
               <div class="d-flex flex-column flex-lg-row align-items-center mt-3 mt-lg-0">
-                <div class="col-xs-12 col-md-3 px-2">
+                <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
                     src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
                     alt=""
                   />
                 </div>
-                <div class="col-xs-12 col-md-9 px-2 text-center">
+                <div class="col-xs-12 col-md-8 px-2 text-center">
                   <h5 class="font-weight-bold text-light m-0">Licencia Ambiental</h5>
                   <p class="text-light">(Resolución 952 de 1995)</p>
                   <a class="button-oc-2024 color-light my-2 d-inline-block" href="">Ver más</a>
@@ -360,14 +360,14 @@
               </div>
 
               <div class="d-flex flex-column flex-lg-row align-items-center mt-3 mt-lg-0">
-                <div class="col-xs-12 col-md-3 px-2">
+                <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
                     src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
                     alt=""
                   />
                 </div>
-                <div class="col-xs-12 col-md-9 px-2 text-center">
+                <div class="col-xs-12 col-md-8 px-2 text-center">
                   <h5 class="font-weight-bold text-light m-0">Licencia Ambiental</h5>
                   <p class="text-light">(Resolución 952 de 1995)</p>
                   <a class="button-oc-2024 color-light my-2 d-inline-block" href="">Ver más</a>
