feat: hover color icons

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -508,32 +508,205 @@
                       </p>
                     </div>
                   </div>
+
+                  <div
+                    data-target="covenas-monitoreo-3"
+                    style="gap: 16px"
+                    class="d-flex align-items-center mt-3 card-interactive-icons__container"
+                  >
+                    <div
+                      class="card-interactive-icons___box-icon"
+                      style="--border-fill: #0036ff; --hover-color: #FFFFFF"
+                    >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="59"
+                        height="60"
+                        viewBox="0 0 59 60"
+                      >
+                        <defs>
+                          <clipPath id="3dxdcvyu5a">
+                            <path
+                              data-name="Rectángulo 20"
+                              transform="translate(0 -.487)"
+                              style="fill: #707070"
+                              d="M0 0h59v60H0z"
+                            />
+                          </clipPath>
+                        </defs>
+                        <g data-name="Vector Smart Object">
+                          <g data-name="Vector Smart Object">
+                            <g data-name="Grupo 40">
+                              <g
+                                data-name="Grupo 39"
+                                style="clip-path: url(#3dxdcvyu5a)"
+                                transform="translate(0 .487)"
+                              >
+                                <path
+                                  data-name="Trazado 100"
+                                  d="M18.364 27.291H.648a.768.768 0 0 0 0 1.518h58.633a.768.768 0 0 0 0-1.518H18.364z"
+                                  transform="translate(0 30.757)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 101"
+                                  d="M18.364 0H.648A.71.71 0 0 0 0 .759a.71.71 0 0 0 .648.759h58.633a.71.71 0 0 0 .648-.759.71.71 0 0 0-.648-.759H18.364z"
+                                  transform="translate(0 -.364)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 102"
+                                  d="M58.909 12.541a.675.675 0 0 0-.729-.65 7.421 7.421 0 0 0-4.311 2.657c-1.235 1.267-2.3 2.362-4.542 2.362s-3.306-1.095-4.54-2.363c-1.25-1.284-2.668-2.741-5.4-2.741s-4.145 1.457-5.4 2.741c-1.234 1.268-2.3 2.363-4.54 2.363s-3.305-1.1-4.54-2.363c-1.25-1.284-2.667-2.741-5.4-2.741s-4.144 1.457-5.395 2.741c-1.234 1.268-2.3 2.363-4.54 2.363s-3.292-1.095-4.526-2.362a7.42 7.42 0 0 0-4.311-2.657.675.675 0 0 0-.729.65.746.746 0 0 0 .555.853 6.332 6.332 0 0 1 3.629 2.294c1.251 1.284 2.669 2.739 5.4 2.739s4.145-1.456 5.4-2.741c1.234-1.268 2.3-2.363 4.539-2.363s3.306 1.1 4.54 2.363c1.25 1.285 2.667 2.741 5.4 2.741s4.145-1.456 5.4-2.741c1.234-1.268 2.3-2.363 4.54-2.363s3.306 1.1 4.54 2.363c1.25 1.285 2.667 2.741 5.4 2.741s4.146-1.455 5.4-2.739a6.332 6.332 0 0 1 3.63-2.294.746.746 0 0 0 .555-.853"
+                                  transform="translate(0 13.098)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 103"
+                                  d="M58.909 16.189a.675.675 0 0 0-.729-.65 7.421 7.421 0 0 0-4.312 2.661c-1.235 1.267-2.3 2.362-4.542 2.362s-3.306-1.095-4.54-2.363c-1.25-1.284-2.668-2.74-5.4-2.74s-4.145 1.456-5.4 2.74c-1.234 1.268-2.3 2.363-4.54 2.363s-3.305-1.1-4.54-2.363c-1.25-1.284-2.667-2.74-5.4-2.74s-4.144 1.456-5.395 2.74c-1.234 1.268-2.3 2.363-4.54 2.363S6.28 19.463 5.046 18.2a7.42 7.42 0 0 0-4.311-2.661.675.675 0 0 0-.729.65.746.746 0 0 0 .555.854 6.329 6.329 0 0 1 3.629 2.294c1.251 1.284 2.669 2.739 5.4 2.739s4.145-1.456 5.4-2.741c1.234-1.268 2.3-2.363 4.539-2.363s3.306 1.1 4.54 2.363c1.25 1.285 2.667 2.741 5.4 2.741s4.145-1.456 5.4-2.741c1.234-1.268 2.3-2.363 4.54-2.363s3.306 1.1 4.54 2.363c1.25 1.285 2.667 2.741 5.4 2.741s4.146-1.455 5.4-2.739a6.329 6.329 0 0 1 3.63-2.294.747.747 0 0 0 .555-.854"
+                                  transform="translate(0 17.259)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 104"
+                                  d="M58.909 20.118a.675.675 0 0 0-.729-.65 7.421 7.421 0 0 0-4.311 2.657c-1.235 1.267-2.3 2.362-4.542 2.362s-3.306-1.095-4.54-2.363c-1.25-1.284-2.668-2.741-5.4-2.741s-4.145 1.457-5.4 2.741c-1.234 1.268-2.3 2.363-4.54 2.363s-3.305-1.1-4.54-2.363c-1.25-1.284-2.667-2.741-5.4-2.741s-4.144 1.457-5.395 2.741c-1.234 1.268-2.3 2.363-4.54 2.363s-3.292-1.095-4.526-2.363a7.42 7.42 0 0 0-4.311-2.656.675.675 0 0 0-.729.65.746.746 0 0 0 .555.853 6.332 6.332 0 0 1 3.629 2.294C5.441 24.549 6.859 26 9.587 26s4.145-1.456 5.4-2.741C16.216 22 17.282 20.9 19.521 20.9s3.306 1.1 4.54 2.363c1.25 1.285 2.667 2.741 5.4 2.741s4.145-1.456 5.4-2.741C36.085 22 37.151 20.9 39.39 20.9s3.306 1.1 4.54 2.363C45.181 24.548 46.6 26 49.326 26s4.146-1.455 5.4-2.739a6.332 6.332 0 0 1 3.63-2.294.746.746 0 0 0 .555-.853"
+                                  transform="translate(0 21.739)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 105"
+                                  d="M58.909 23.766a.675.675 0 0 0-.729-.65 7.421 7.421 0 0 0-4.311 2.657c-1.235 1.267-2.3 2.362-4.542 2.362s-3.306-1.095-4.54-2.363c-1.25-1.284-2.668-2.741-5.4-2.741s-4.145 1.457-5.4 2.741c-1.234 1.268-2.3 2.363-4.54 2.363s-3.305-1.1-4.54-2.363c-1.25-1.284-2.667-2.741-5.4-2.741s-4.144 1.457-5.395 2.741c-1.234 1.268-2.3 2.363-4.54 2.363S6.28 27.04 5.046 25.772a7.42 7.42 0 0 0-4.311-2.656.675.675 0 0 0-.729.65.746.746 0 0 0 .555.853 6.332 6.332 0 0 1 3.629 2.294c1.251 1.284 2.669 2.739 5.4 2.739s4.145-1.456 5.4-2.741c1.234-1.268 2.3-2.363 4.539-2.363s3.306 1.1 4.54 2.363c1.25 1.285 2.667 2.741 5.4 2.741s4.145-1.456 5.4-2.741c1.234-1.268 2.3-2.363 4.54-2.363s3.306 1.1 4.54 2.363c1.25 1.285 2.667 2.741 5.4 2.741s4.146-1.455 5.4-2.739a6.332 6.332 0 0 1 3.63-2.294.746.746 0 0 0 .555-.853"
+                                  transform="translate(0 25.899)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 106"
+                                  d="M16.383 7.5a.71.71 0 0 0 .648-.759.71.71 0 0 0-.648-.759h-2.968a.71.71 0 0 0-.648.759.71.71 0 0 0 .648.759z"
+                                  transform="translate(14.558 6.455)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 107"
+                                  d="M12.922 10.97a.71.71 0 0 0 .648-.759.71.71 0 0 0-.648-.759H9.954a.71.71 0 0 0-.648.759.71.71 0 0 0 .648.759z"
+                                  transform="translate(10.612 10.415)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 108"
+                                  d="M20.249 10.97a.71.71 0 0 0 .648-.759.71.71 0 0 0-.648-.759H17.28a.71.71 0 0 0-.648.759.71.71 0 0 0 .648.759z"
+                                  transform="translate(18.966 10.415)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 109"
+                                  d="M6.323 4.727h2.969a.71.71 0 0 0 .649-.759.711.711 0 0 0-.649-.759H6.323a.71.71 0 0 0-.648.759.71.71 0 0 0 .648.759"
+                                  transform="translate(6.472 3.295)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 110"
+                                  d="M23.474 4.727a.71.71 0 0 0 .648-.759.71.71 0 0 0-.648-.759h-2.968a.71.71 0 0 0-.648.759.71.71 0 0 0 .648.759z"
+                                  transform="translate(22.645 3.295)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 111"
+                                  d="M27.074 11a.71.71 0 0 0 .648-.759.71.71 0 0 0-.648-.759h-2.968a.71.71 0 0 0-.648.759.71.71 0 0 0 .648.759z"
+                                  transform="translate(26.75 10.449)"
+                                  style="fill: #707070"
+                                />
+                                <path
+                                  data-name="Trazado 112"
+                                  d="M5.211 11a.71.71 0 0 0 .648-.759.71.71 0 0 0-.648-.759H2.243a.71.71 0 0 0-.648.759.71.71 0 0 0 .648.759z"
+                                  transform="translate(1.818 10.449)"
+                                  style="fill: #707070"
+                                />
+                              </g>
+                            </g>
+                          </g>
+                          <path
+                            data-name="Color Overlay"
+                            d="M.637 59a.757.757 0 0 1 0-1.494h57.724a.756.756 0 0 1 0 1.494zm42.613-6.651c-1.216-1.248-2.266-2.325-4.47-2.325s-3.254 1.077-4.47 2.325c-1.231 1.265-2.627 2.7-5.312 2.7s-4.081-1.434-5.312-2.7c-1.214-1.248-2.264-2.325-4.468-2.325s-3.254 1.077-4.47 2.325c-1.231 1.265-2.625 2.7-5.31 2.7s-4.081-1.432-5.314-2.7a6.239 6.239 0 0 0-3.572-2.256A.713.713 0 0 1 0 49.37v-.03a.647.647 0 0 1 .006-.087.666.666 0 0 1 .719-.639 7.3 7.3 0 0 1 4.242 2.615c1.216 1.248 2.266 2.325 4.472 2.325s3.254-1.077 4.468-2.327c1.231-1.263 2.627-2.7 5.312-2.7s4.079 1.434 5.312 2.7c1.214 1.25 2.264 2.327 4.468 2.327s3.254-1.077 4.47-2.327c1.231-1.263 2.625-2.7 5.312-2.7s4.079 1.434 5.31 2.7c1.216 1.25 2.264 2.327 4.47 2.327s3.256-1.077 4.472-2.325a7.306 7.306 0 0 1 4.244-2.615.664.664 0 0 1 .719.639.732.732 0 0 1-.546.84 6.243 6.243 0 0 0-3.575 2.259c-1.231 1.265-2.628 2.7-5.314 2.7s-4.08-1.438-5.311-2.703zm0-7.686c-1.216-1.248-2.266-2.327-4.47-2.327s-3.254 1.079-4.47 2.327c-1.231 1.265-2.627 2.7-5.312 2.7s-4.081-1.433-5.312-2.7c-1.214-1.248-2.264-2.327-4.468-2.327s-3.254 1.079-4.47 2.327c-1.231 1.265-2.625 2.7-5.31 2.7s-4.081-1.433-5.314-2.7a6.231 6.231 0 0 0-3.572-2.257.714.714 0 0 1-.552-.722v-.017a.911.911 0 0 1 .006-.1.666.666 0 0 1 .719-.639 7.293 7.293 0 0 1 4.242 2.615c1.216 1.248 2.266 2.325 4.472 2.325s3.254-1.079 4.468-2.327c1.231-1.265 2.627-2.7 5.312-2.7s4.079 1.434 5.312 2.7c1.214 1.248 2.264 2.327 4.468 2.327s3.254-1.079 4.47-2.327c1.231-1.265 2.625-2.7 5.312-2.7s4.079 1.434 5.31 2.7c1.216 1.25 2.264 2.327 4.47 2.327s3.256-1.077 4.472-2.325a7.3 7.3 0 0 1 4.244-2.615.664.664 0 0 1 .719.639.734.734 0 0 1-.546.84 6.236 6.236 0 0 0-3.575 2.259c-1.231 1.263-2.628 2.7-5.314 2.7s-4.08-1.438-5.311-2.703zm0-8.278c-1.216-1.248-2.266-2.327-4.47-2.327s-3.254 1.077-4.47 2.327c-1.231 1.265-2.627 2.7-5.312 2.7s-4.081-1.432-5.312-2.7c-1.214-1.25-2.264-2.327-4.468-2.327s-3.254 1.077-4.47 2.327c-1.231 1.265-2.625 2.7-5.31 2.7s-4.081-1.435-5.313-2.698a6.221 6.221 0 0 0-3.573-2.259A.715.715 0 0 1 0 33.4v-.015a.884.884 0 0 1 .006-.1.666.666 0 0 1 .719-.641 7.293 7.293 0 0 1 4.242 2.615c1.216 1.248 2.266 2.325 4.472 2.325s3.254-1.077 4.468-2.325c1.231-1.265 2.627-2.7 5.312-2.7S23.3 34 24.53 35.262c1.214 1.248 2.264 2.325 4.468 2.325s3.254-1.077 4.47-2.325c1.231-1.265 2.625-2.7 5.312-2.7s4.079 1.434 5.31 2.7c1.216 1.248 2.264 2.325 4.47 2.325s3.256-1.077 4.472-2.325a7.3 7.3 0 0 1 4.244-2.615.666.666 0 0 1 .719.641.735.735 0 0 1-.546.84 6.226 6.226 0 0 0-3.575 2.259c-1.231 1.263-2.628 2.695-5.314 2.695s-4.079-1.432-5.31-2.697zm0-7.688c-1.216-1.248-2.266-2.327-4.47-2.327s-3.254 1.079-4.47 2.327C33.08 29.962 31.684 31.4 29 31.4s-4.081-1.434-5.312-2.7c-1.214-1.248-2.264-2.327-4.468-2.327s-3.254 1.079-4.47 2.327c-1.231 1.265-2.625 2.7-5.31 2.7s-4.081-1.432-5.314-2.7a6.238 6.238 0 0 0-3.574-2.26.715.715 0 0 1-.552-.722V25.7a.914.914 0 0 1 .006-.1.665.665 0 0 1 .719-.639 7.293 7.293 0 0 1 4.242 2.615C6.182 28.824 7.233 29.9 9.439 29.9s3.254-1.077 4.468-2.327c1.231-1.263 2.627-2.7 5.312-2.7s4.079 1.434 5.312 2.7C25.744 28.824 26.795 29.9 29 29.9s3.254-1.077 4.47-2.327c1.231-1.263 2.625-2.7 5.312-2.7s4.079 1.434 5.31 2.7c1.216 1.25 2.264 2.327 4.47 2.327s3.256-1.077 4.472-2.325a7.3 7.3 0 0 1 4.244-2.615.664.664 0 0 1 .719.639.734.734 0 0 1-.546.84 6.243 6.243 0 0 0-3.577 2.261c-1.231 1.265-2.628 2.7-5.314 2.7s-4.079-1.438-5.31-2.7zm6.816-7.221a.757.757 0 0 1 0-1.494h2.922a.756.756 0 0 1 0 1.494zM4 21.475a.757.757 0 0 1 0-1.494h2.92a.756.756 0 0 1 0 1.494zm31.686-.064a.756.756 0 0 1 0-1.492h2.922a.755.755 0 0 1 0 1.492zm-15.437 0a.755.755 0 0 1 0-1.492h2.922a.756.756 0 0 1 0 1.492zm7.292-7.316a.757.757 0 0 1 0-1.494h2.919a.756.756 0 0 1 0 1.494zm14.941-5.84a.7.7 0 0 1-.639-.747.7.7 0 0 1 .639-.747H45.4a.7.7 0 0 1 .637.747.7.7 0 0 1-.637.747zm-29.886 0a.7.7 0 0 1-.637-.747.7.7 0 0 1 .637-.747h2.922a.7.7 0 0 1 .639.747.7.7 0 0 1-.639.747zM.637 1.494A.7.7 0 0 1 0 .747.7.7 0 0 1 .637 0h57.724A.7.7 0 0 1 59 .747a.7.7 0 0 1-.639.747z"
+                            style="fill: #707070"
+                          />
+                        </g>
+                      </svg>
+                    </div>
+                    <div class="card-interactive-icons___box-description">
+                      <p>
+                        Aguas <br />
+                        Subterraneas
+                      </p>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-12 col-lg-6"></div>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="text-center position-relative" style="overflow-x: scroll;">
+            <div
+              class="text-center position-relative"
+              style="overflow-x: scroll"
+            >
               <div style="width: 1070px">
-                  <div class="map-terminal-2024__dots">
-                    <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-monitoreo-1">
-                      <span style="--outline-color: #27ff00; left: 350px; top: 310px;" class="location-map-dot"></span>
-                      <span style="--outline-color: #27ff00; left: 400px; top: 312px;" class="location-map-dot"></span>
-                      <span style="--outline-color: #27ff00; left: 370px; top: 345px;" class="location-map-dot"></span>
-                    </div>
-
-                    <div class="dots-map-2024 dots-monitoreo" id="covenas-monitoreo-2">
-                      <span style="--outline-color: #e3ff00; left: 510px; top: 360px;" class="location-map-dot"></span>
-                      <span style="--outline-color: #e3ff00; left: 598px; top: 405px;" class="location-map-dot"></span>
-                      <span style="--outline-color: #e3ff00; left: 530px; top: 465px;" class="location-map-dot"></span>
-                      <span style="--outline-color: #e3ff00; left: 682px; top: 440px;" class="location-map-dot"></span>
-                      <span style="--outline-color: #e3ff00; left: 738px; top: 385px;" class="location-map-dot"></span>
-                      <span style="--outline-color: #e3ff00; left: 782px; top: 333px;" class="location-map-dot"></span>
-                      <span style="--outline-color: #e3ff00; left: 809px; top: 315px;" class="location-map-dot"></span>
-                    </div>
+                <div class="map-terminal-2024__dots">
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-monitoreo-1"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 350px; top: 310px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #27ff00; left: 400px; top: 312px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #27ff00; left: 370px; top: 345px"
+                      class="location-map-dot"
+                    ></span>
                   </div>
-                  <img class="img-fluid map-terminal-2024" src="/assets/img/grupo-771.webp" alt="" />
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-monitoreo-2"
+                  >
+                    <span
+                      style="--outline-color: #e3ff00; left: 510px; top: 360px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #e3ff00; left: 598px; top: 405px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #e3ff00; left: 530px; top: 465px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #e3ff00; left: 682px; top: 440px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #e3ff00; left: 738px; top: 385px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #e3ff00; left: 782px; top: 333px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #e3ff00; left: 809px; top: 315px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+                </div>
+                <img
+                  class="img-fluid map-terminal-2024"
+                  src="/assets/img/grupo-771.webp"
+                  alt=""
+                />
               </div>
             </div>
           </div>
