--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -516,7 +516,7 @@
                   >
                     <div
                       class="card-interactive-icons___box-icon"
-                      style="--border-fill: #0036ff; --hover-color: #FFFFFF"
+                      style="--border-fill: #0036ff; --hover-color: #ffffff"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -638,6 +638,38 @@
                       </p>
                     </div>
                   </div>
+
+                  <div
+                    data-target="covenas-monitoreo-4"
+                    style="gap: 16px"
+                    class="d-flex align-items-center mt-3 card-interactive-icons__container"
+                  >
+                    <div
+                      class="card-interactive-icons___box-icon"
+                      style="--border-fill: #ff5512; --hover-color: #ffffff"
+                    >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="81"
+                        height="76"
+                        viewBox="0 0 81 76"
+                      >
+                        <g data-name="Vector Smart Object copy">
+                          <path
+                            data-name="Color Overlay"
+                            d="M60.3 74.956A7.015 7.015 0 0 1 56.614 76a7.236 7.236 0 0 1 0-14.471 7 7 0 0 1 3.686 1.046 7 7 0 0 1 3.689-1.046 7.236 7.236 0 0 1 0 14.471 7.015 7.015 0 0 1-3.689-1.044zm.855-2.709a4.432 4.432 0 0 0 2.834 1.042 4.525 4.525 0 0 0 0-9.049 4.43 4.43 0 0 0-2.834 1.042 1.341 1.341 0 0 1-1.71 0 4.43 4.43 0 0 0-2.834-1.042 4.525 4.525 0 0 0 0 9.049 4.432 4.432 0 0 0 2.834-1.042 1.341 1.341 0 0 1 1.71 0zM19.99 69.773a7.015 7.015 0 0 1-3.69 1.044 7.236 7.236 0 0 1 0-14.471 7.013 7.013 0 0 1 3.69 1.044 7.007 7.007 0 0 1 3.689-1.044 7.236 7.236 0 0 1 0 14.471 7.01 7.01 0 0 1-3.689-1.044zm.855-2.709a4.43 4.43 0 0 0 2.834 1.042 4.525 4.525 0 0 0 0-9.049 4.442 4.442 0 0 0-2.836 1.043 1.338 1.338 0 0 1-1.708 0 4.432 4.432 0 0 0-2.835-1.043 4.525 4.525 0 0 0 0 9.049 4.43 4.43 0 0 0 2.834-1.042 1.342 1.342 0 0 1 1.71 0zm9.724-14.934a1.355 1.355 0 0 1 0-2.711h35.354a12.432 12.432 0 0 0 7.842-22.034 1.353 1.353 0 0 1 1.71-2.1 15.145 15.145 0 0 1-9.552 26.845zm-15.492 0a15.145 15.145 0 0 1-6.32-28.876A18.9 18.9 0 0 1 27.039 0a18.682 18.682 0 0 1 17.118 11.069 16.287 16.287 0 0 1 11.715-4.945 15.882 15.882 0 0 1 11.564 5.007A16.306 16.306 0 0 1 71.954 23.1a1.35 1.35 0 1 1-2.7-.13 13.562 13.562 0 0 0-3.769-9.959 13.221 13.221 0 0 0-9.627-4.17h-.086A13.535 13.535 0 0 0 44.8 14.5a1.333 1.333 0 0 1-1.312.547 1.349 1.349 0 0 1-1.071-.937 16.085 16.085 0 0 0-31.473 4.765 16.268 16.268 0 0 0 .714 4.772 1.357 1.357 0 0 1-.826 1.674 12.432 12.432 0 0 0 4.241 24.1h9.958a1.355 1.355 0 0 1 0 2.711zm38.254-6.318a1.35 1.35 0 0 1-1.206-.743 1.366 1.366 0 0 1 .115-1.414l4.937-6.779a1.431 1.431 0 0 0-.062-1.325 1.108 1.108 0 0 0-.948-.586 1.473 1.473 0 0 0-1.487 1.471 1.351 1.351 0 1 1-2.7 0 4.179 4.179 0 0 1 4.166-4.184 3.826 3.826 0 0 1 3.3 1.934 4.124 4.124 0 0 1-.029 4.206L55.991 43.1h2.967a1.355 1.355 0 0 1 0 2.711zM33.945 31.145a8.223 8.223 0 1 1 8.222 8.261 8.25 8.25 0 0 1-8.222-8.261zm2.7 0a5.524 5.524 0 1 0 5.522-5.545 5.542 5.542 0 0 0-5.523 5.545zm-15.952 0a8.251 8.251 0 0 1 8.224-8.258 8.136 8.136 0 0 1 3.6.83 1.361 1.361 0 0 1 .623 1.813 1.345 1.345 0 0 1-1.8.624 5.484 5.484 0 0 0-2.415-.556 5.549 5.549 0 0 0 0 11.1 5.457 5.457 0 0 0 2.443-.57 1.354 1.354 0 0 1 1.2 2.431 8.109 8.109 0 0 1-3.638.851 8.251 8.251 0 0 1-8.238-8.265z"
+                            style="fill: #707070"
+                          />
+                        </g>
+                      </svg>
+                    </div>
+                    <div class="card-interactive-icons___box-description">
+                      <p>
+                        Factores <br>
+                        de Emisión
+                      </p>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-12 col-lg-6"></div>
               </div>
@@ -698,6 +730,44 @@
                     ></span>
                     <span
                       style="--outline-color: #e3ff00; left: 809px; top: 315px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo"
+                    id="covenas-monitoreo-3"
+                  >
+                    <span
+                      style="--outline-color: #0036ff; left: 355px; top: 275px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 598px; top: 405px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 530px; top: 465px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 682px; top: 440px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 738px; top: 385px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 782px; top: 333px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 809px; top: 315px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 809px; top: 315px"
                       class="location-map-dot"
                     ></span>
                   </div>
