--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -295,7 +295,10 @@
         <!-- Mapa -->
         <div class="row flex-wrap justify-content-center px-4 py-5">
           <div id="col-data-map">
-            <div id="info-manual-ambiental" class="card-interactive-icons px-5 py-3 d-none">
+            <div
+              id="info-manual-ambiental"
+              class="card-interactive-icons px-5 py-3 d-none card-list-info"
+            >
               <h6
                 class="card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
               >
@@ -668,7 +671,7 @@
                     </div>
                     <div class="card-interactive-icons___box-description">
                       <p>
-                        Factores <br>
+                        Factores <br />
                         de Emisión
                       </p>
                     </div>
@@ -677,13 +680,198 @@
                 <div class="col-12 col-lg-6"></div>
               </div>
             </div>
+
+            <div id="info-operaciones" class="card-list-info d-none">
+              <div class="card-interactive-icons px-5 py-3">
+                <h6
+                  class="card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
+                >
+                  Lista de Equipos
+                </h6>
+
+                <div class="row mt-3">
+                  <div class="col-12 col-lg-6">
+                    <div
+                      data-target="covenas-operaciones-1"
+                      style="gap: 16px"
+                      class="d-flex align-items-center card-interactive-icons__container"
+                    >
+                      <div
+                        class="card-interactive-icons___box-icon small"
+                        style="--border-fill: #27ff00"
+                      >
+                        <svg
+                          data-name="Grupo 677"
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="33.588"
+                          height="53.591"
+                          viewBox="0 0 33.588 53.591"
+                        >
+                          <defs>
+                            <clipPath id="ih8bvvy6ha">
+                              <path
+                                data-name="Rectángulo 185"
+                                style="fill: #707070"
+                                d="M0 0h33.588v53.591H0z"
+                              />
+                            </clipPath>
+                          </defs>
+                          <g
+                            data-name="Grupo 676"
+                            style="clip-path: url(#ih8bvvy6ha)"
+                          >
+                            <path
+                              data-name="Trazado 1186"
+                              d="M34.266 9.546c-.008-.025-.033-.042-.042-.067a.741.741 0 0 0-.151-.209c-.008-.008-.008-.008-.008-.017l-4.413-4.02a.008.008 0 0 1-.008-.008V1.993A2 2 0 0 0 27.651 0H11.272a2 2 0 0 0-1.993 1.993v3.24a.008.008 0 0 0-.008.008l-4.413 4.02c-.008.008-.008.008-.008.017a1.145 1.145 0 0 0-.151.2.294.294 0 0 0-.042.067.885.885 0 0 0-.067.335v39.784a.84.84 0 0 0 .837.837h7.712v2.252a.84.84 0 0 0 .837.837h10.97a.84.84 0 0 0 .837-.837V50.5H33.5a.84.84 0 0 0 .837-.837V9.881a.75.75 0 0 0-.067-.335m-1.6 3.9H6.265v-2.73h26.4zM30.5 38.1V23.379a.838.838 0 0 0-.427-.729l-5.585-3.132v-4.387h8.173V38.1zm-24.233 0V15.114H14.5V19.5l-5.581 3.134a.831.831 0 0 0-.427.728v7.57a.757.757 0 0 0-.059.31v6.841H6.265zm16.544-22.986V20a.838.838 0 0 0 .427.728l5.585 3.132v6.556h-2.11v-3.587a.84.84 0 0 0-.837-.837H22.5a.84.84 0 0 0-.837.837v3.584h-4.4v-3.584a.84.84 0 0 0-.837-.837h-3.379a.84.84 0 0 0-.837.837v3.584h-2.052v-6.548l5.585-3.132a.831.831 0 0 0 .428-.733v-4.877h6.64zm2.227 15.3h-1.7v-2.748h1.7zm-9.454 0h-1.7v-2.748h1.7zm-5.476 1.675h18.723v6H10.108zm-3.843 7.685h26.4v2.16h-26.4zm4.689-37.781a.318.318 0 0 1 .318-.318h16.379a.318.318 0 0 1 .318.318v3.023H10.954zm-.787 4.7h18.6l2.579 2.345H7.588zm13.942 45.223h-9.295V50.5h9.295v1.415m.837-3.09H6.265v-5.216h26.4v5.217z"
+                              transform="translate(-.747)"
+                              style="fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1187"
+                              d="M.837 44.99a.84.84 0 0 0-.837.837V47.6a.837.837 0 1 0 1.675 0v-1.773a.834.834 0 0 0-.837-.837"
+                              transform="translate(0 -7.317)"
+                              style="fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1188"
+                              d="M.837 21.62a.84.84 0 0 0-.837.837V38.61a.837.837 0 0 0 1.675 0V22.457a.834.834 0 0 0-.837-.837"
+                              transform="translate(0 -3.516)"
+                              style="fill: #707070"
+                            />
+                          </g>
+                        </svg>
+                      </div>
+                      <div class="card-interactive-icons___box-description">
+                        <p>Desaireadores</p>
+                      </div>
+                    </div>
+
+                    <div
+                      data-target="covenas-operaciones-2"
+                      style="gap: 16px"
+                      class="d-flex align-items-center card-interactive-icons__container mt-1"
+                    >
+                      <div
+                        class="card-interactive-icons___box-icon small"
+                        style="--border-fill: #27ff00"
+                      >
+                        <svg
+                          data-name="Grupo 679"
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="54.927"
+                          height="54.927"
+                          viewBox="0 0 54.927 54.927"
+                        >
+                          <defs>
+                            <clipPath id="621n61ydva">
+                              <path
+                                data-name="Rectángulo 186"
+                                style="fill: #707070"
+                                d="M0 0h54.927v54.927H0z"
+                              />
+                            </clipPath>
+                          </defs>
+                          <g
+                            data-name="Grupo 678"
+                            style="clip-path: url(#621n61ydva)"
+                          >
+                            <path
+                              data-name="Trazado 1189"
+                              d="M38.739 12.783A10.956 10.956 0 1 1 27.783 1.826a10.956 10.956 0 0 1 10.956 10.957m1.826 0a12.783 12.783 0 1 0-12.782 12.782 12.783 12.783 0 0 0 12.782-12.782"
+                              transform="translate(-.56 -.373)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1190"
+                              d="M30.478 13.652a1.826 1.826 0 1 1-1.826-1.826 1.826 1.826 0 0 1 1.826 1.826m1.826 0a3.652 3.652 0 1 0-3.652 3.648 3.652 3.652 0 0 0 3.648-3.648"
+                              transform="translate(-1.43 -1.243)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1191"
+                              d="M29.826 10.478V5.913a.913.913 0 0 0-1.826 0v4.565a.913.913 0 0 0 1.826 0"
+                              transform="translate(-1.691 -.808)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1192"
+                              d="m25.145 15.153-2.739 1.826a.913.913 0 0 0 1.013 1.521l2.739-1.826a.913.913 0 1 0-1.013-1.519"
+                              transform="translate(-1.169 -1.678)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1193"
+                              d="m31.406 16.673 2.739 1.827a.913.913 0 1 0 1.013-1.519l-2.739-1.826a.913.913 0 0 0-1.013 1.519"
+                              transform="translate(-1.952 -1.678)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1194"
+                              d="M34.609 13.217a6.391 6.391 0 1 1-6.391-6.391 6.391 6.391 0 0 1 6.391 6.391m1.826 0a8.217 8.217 0 1 0-8.217 8.217 8.218 8.218 0 0 0 8.217-8.217"
+                              transform="translate(-.995 -.808)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1195"
+                              d="M50.783 51.826v5.357a.121.121 0 0 1-.121.121H39.948a.121.121 0 0 1-.121-.121v-5.357zM38.913 50a.913.913 0 0 0-.913.913v6.27a1.948 1.948 0 0 0 1.948 1.948h10.713a1.948 1.948 0 0 0 1.948-1.948v-6.27A.913.913 0 0 0 51.7 50z"
+                              transform="translate(-2.56 -4.721)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1196"
+                              d="M35.948 45.826h18.017a.121.121 0 0 1 .121.121v3.409a.121.121 0 0 1-.121.121H35.948a.121.121 0 0 1-.121-.121v-3.409a.121.121 0 0 1 .121-.121m0-1.826A1.948 1.948 0 0 0 34 45.947v3.409a1.948 1.948 0 0 0 1.948 1.944h18.017a1.948 1.948 0 0 0 1.948-1.948v-3.405A1.948 1.948 0 0 0 53.965 44z"
+                              transform="translate(-2.213 -4.2)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1197"
+                              d="M16.783 51.826v5.357a.121.121 0 0 1-.121.121H5.948a.121.121 0 0 1-.121-.121v-5.357zM4.913 50a.913.913 0 0 0-.913.913v6.27a1.948 1.948 0 0 0 1.948 1.947h10.713a1.948 1.948 0 0 0 1.948-1.948v-6.27A.913.913 0 0 0 17.7 50z"
+                              transform="translate(.396 -4.721)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1198"
+                              d="M1.948 45.826h18.017a.121.121 0 0 1 .121.121v3.409a.121.121 0 0 1-.121.121H1.948a.121.121 0 0 1-.121-.121v-3.409a.121.121 0 0 1 .121-.121m0-1.826A1.948 1.948 0 0 0 0 45.947v3.409A1.948 1.948 0 0 0 1.948 51.3h18.017a1.948 1.948 0 0 0 1.948-1.948v-3.405A1.948 1.948 0 0 0 19.965 44z"
+                              transform="translate(.744 -4.2)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1199"
+                              d="M15.869 13.611a10.958 10.958 0 0 1 .407-2.924.913.913 0 0 0-1.358-1.021A22.829 22.829 0 0 0 4 29.133v12.782a.913.913 0 0 0 .913.913H17.7a.913.913 0 0 0 .913-.913V29.133a8.175 8.175 0 0 1 1.963-5.322.913.913 0 0 0-.159-1.331 10.923 10.923 0 0 1-4.543-8.868m.913 15.522V41H5.826V29.133A20.98 20.98 0 0 1 14.1 12.441q-.056.583-.057 1.171a12.736 12.736 0 0 0 4.557 9.767 9.984 9.984 0 0 0-1.817 5.754"
+                              transform="translate(.396 -1.202)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                            <path
+                              data-name="Trazado 1200"
+                              d="M40.124 10.689a10.878 10.878 0 0 1-4.135 11.791.913.913 0 0 0-.159 1.331 8.178 8.178 0 0 1 1.962 5.322v12.782a.913.913 0 0 0 .913.913h12.783a.913.913 0 0 0 .913-.913V29.133A22.826 22.826 0 0 0 41.482 9.667a.913.913 0 0 0-1.358 1.022m10.451 18.444V41H39.618V29.133a9.99 9.99 0 0 0-1.818-5.754 12.737 12.737 0 0 0 4.555-9.768q0-.588-.056-1.171a20.98 20.98 0 0 1 8.273 16.692"
+                              transform="translate(-2.353 -1.202)"
+                              style="fill-rule: evenodd; fill: #707070"
+                            />
+                          </g>
+                        </svg>
+                      </div>
+                      <div class="card-interactive-icons___box-description">
+                        <p>
+                          Bombas <br />
+                          Centrífugas
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-lg-6"></div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col">
             <div
               class="text-center position-relative"
               style="overflow-x: scroll"
             >
-              <div id="container-map-terminal-2024" style="width: 1070px; margin: 0 auto;">
+              <div
+                id="container-map-terminal-2024"
+                style="width: 1070px; margin: 0 auto"
+              >
                 <div class="map-terminal-2024__dots">
                   <div
                     class="dots-map-2024 dots-monitoreo d-none"
