fix: responsive laptop

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -176,10 +176,10 @@
 
       <section class="bg-pattern-2024" id="menu-map">
         <div
-          class="d-flex flex-lg-row flex-column mt-3 mt-lg-0 notifications-top"
+          class="d-flex flex-wrap flex-lg-row flex-column mt-3 mt-lg-0 notifications-top"
         >
           <div
-            class="d-flex flex-row align-items-center text-center pl-4 p-2 p-lg-5 card-ocensa menu-map shadow bg-white position-sticky sticky-top"
+            class="d-flex flex-row align-items-center text-center pl-4 p-2 p-lg-5 card-ocensa menu-map shadow bg-white sticky-mobile"
           >
             <a
               data-target="info-manual-ambiental"
@@ -247,7 +247,7 @@
               src="/assets/img/icons/rect-ngulo-56.webp"
               alt=""
             />
-            <a class="d-block button-oc-2024 mt-3" href="">Ver más</a>
+            <a style="white-space: nowrap;" class="d-block button-oc-2024 mt-3" href="">Ver más</a>
           </div>
 
           <div
