fix: responsive map laptop

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -3118,7 +3118,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div id="col-map" class="col">
             <div
               class="text-center position-relative"
               style="overflow-x: scroll"
